flask/static/css/style.css
/* ... */
@keyframes glow {
    0% {
        filter: drop-shadow(0px 0px 0px var(--text-color));
    }   
    100% {
        filter: drop-shadow(0px 0px 4px var(--text-color));
    }
}

.tooltip {
    position: relative;
    display: inline;
    padding-left: 8px;
}

.tooltip .tooltip-text {
    visibility: hidden;
    width: max-content;
    font-size: 0.8rem;
    background-color: var(--tooltip-background-color);
    color: var(--tooltip-text-color);
    text-align: center;
    padding: 5px;
    border-radius: 6px;
    position: absolute;
    z-index: 1;
    opacity: 0;
    transition: opacity 0.2s;
    inset-block-start: calc(-48px - 5px);
}

.tooltip:hover .tooltip-text {
    visibility: visible;
    opacity: 1;
}

.question-informative {
    max-width: 24px;
    max-height: 24px;
    width: 24px;
    height: 24px;
    fill: var(--text-color);
    transition: transform 0.2s;
}


.question-informative:hover {
    animation: glow 0.2s forwards;
    cursor: pointer;
    transform: scale(1.1);
}



/* top statistics */

.playercount-all-stat-grid {
    display: grid;
    grid-template-columns: 2fr 1fr;
    column-gap: 2rem;
}

.playercount-stat-grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    column-gap: 2rem;
    row-gap: 2rem;
}

.forecast-line {
    visibility: hidden;
    font-size: 0.9rem;
    text-align: left;
}

.forecast-player-text {
    font-size: 0.65rem;
}

.forecast-hour-header {
    color: var(--forecast-less-emphasis-color);
    font-size: 0.65rem;
    display: inline-block;
    width: 25px;
}


.forecast-less-emphasis {
    color: var(--forecast-less-emphasis-color);
}

.one-stat-grid {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    column-gap: 2rem;
    row-gap:2rem;
}

.card, .review-card  {
    min-height: 85px;
    border: none;
    border-radius: var(--card-border-radius);
    display: flex;
    padding: 15px 10px 10px 10px;
    /*background-color: var(--card-background-color);*/
    display: grid;
    grid-template-rows: 20% 80%;
    align-items: center;
    justify-content: center;
    text-align: center;
}

.forecast-card {
    min-height: 85px;
    border: none;
    border-radius: var(--card-border-radius);
    display: flex;
    padding: 15px 10px 10px 10px;
    display: grid;
    grid-template-rows: repeat(5, 1fr);
    /*background-color: var(--card-background-color);*/
    /*display: grid;
    grid-template-rows: 20% 80%;
    align-items: center;

    text-align: center;*/
    justify-content: center;
    text-align: left;
}

.review-card {
    min-height: 76px;
    padding: 20px 10px 10px 10px;
}


.card-header-text, .review-card-header-text {
    visibility: hidden;
    font-size: 0.75rem;
    color: var(--card-header-text-color);
}

.card-content {
    display: flex;
    align-items: center;
    margin: 0 auto;
}

#server-status {
    max-width: 40px;
    max-height: 40px;
}

.server-up-emoji, .not-sure-yet {
    transform-origin: center; 
    max-width: inherit; 
    max-height: inherit;
    transition: transform 0.2s;
}

@keyframes growFromCenter {
    0% {
        opacity: 0;
        transform: scale(0);
    }
    100% {
        opacity: 1;
        transform: scale(1);
    }
}

.server-up-emoji:hover, .not-sure-yet:hover {
    transform: scale(1.15);
    cursor: pointer;
}

.server-up-emoji:active, .not-sure-yet:active {
    transform: scale(0.8);
}

#players-online {
    font-size: 1.7rem;
}

#players-weekly-change {
    font-size: 1.25rem;
}

.percent-change-icon {
    margin-left: 0.25rem;
}

.not-sure-yet {
    display: hidden;
    max-width: 40px;
    max-height: 40px;
    padding: 2.5px;
}

#players-last-updated, #reviews-last-updated {
 /**/
}

/* playercount chart */

.chart-skeleton {
    max-width: 900px; 
    aspect-ratio: 2 / 1; 
    border: none;
    border-radius: var(--card-border-radius);
    /* chart reflow fix if parent is grid: https://github.com/highcharts/highcharts/issues/9491#issuecomment-605965402 */
    display: grid; 
    width: 100%;
    height: 100%;
    
}

.forecast-disabled-warning {
    visibility: hidden;
    padding-bottom: 0.5rem; 
    color: var(--less-emphasis-color);
    font-size: 0.8rem;
    float: right;
}

@keyframes loading {
    0% { background-position: 100% 0; }
    100% { background-position: -100% 0; }
    /*0% {
        transform: translateX(-100%);
    }
    100% {
        transform: translateX(100%);
    }*/
}

/* review chart */

#playercount-chart, #review-chart {
    /* try for mobile, maybe it will break desktop*/
    /*overflow: hidden;
    max-height: 400px;*/
    max-width: auto;
    border-radius: var(--card-border-radius);
    
}

#percent-positive-reviews {
    background: linear-gradient(to right, #39FF9C 10%, #E6A646 35%, #EE3C53 70%);
    background-size: 10000% 100%;
    background-clip: text;
    transition: background-position 0.5s ease;
    display: inline-block;
    color: transparent;
    background-position: calc(100% - 82.9%) 0;
    font-size: 1.2rem;
}

#avg-playtime-at-review {
    font-size: 1.2rem;
}

#avg-playtime-last-two-weeks {
    font-size: 1.2rem;
}

#avg-total-playtime {
    font-size: 1.2rem;
}


.title-div-wrapper {
    display:grid;
}

.player-forecast-info {
    visibility: hidden;
    padding-top: 0.5rem; 
    color: var(--less-emphasis-color);
    font-size: 0.8rem;
}

.review-callout-info {
    visibility: hidden;
    padding-bottom: 0.5rem; 
    color: var(--less-emphasis-color);
    font-size: 0.8rem;
    display:flex;
    align-items: self-end;
}

.review-image-annotation {
    width: 28px;
    height: 28px;
    max-width: 32px;
    max-height: 32px;
}

.small-review-image-annotation {
    width: 20px;
    height: 20px;
    max-width: 32px;
    max-height: 32px;
}

#toggle-annotations {
    background: #1e1e1e;
    border: 1px solid #383838;
    color: var(--text-color);
    padding: 8px;
    border-radius: 10px; 
    transition: transform 0.1s;
    font-size: 0.8rem;
    white-space: nowrap;
    margin-left: 20px;
}
/* ... */

